# multi_agent_system

./: .env.example  .gitignore  README.md  agents.py  pipeline.py  pipeline_langgraph.py  pyproject.toml  readme.md  requirements.txt  tools.py
Frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
Frontend/skills/: brainstorming.md
Frontend/src/: App.tsx  index.css
Frontend/src/components/: AgentSteps.tsx  Chat.tsx  MessageBubble.tsx  RecentChats.tsx  Sidebar.tsx  ThinkingIndicator.tsx
Frontend/src/components/auth/: AuthCard.tsx  ForgotPassword.tsx  Login.tsx  Signup.tsx
Frontend/src/lib/: api.ts
Frontend/src/pages/: Home.tsx
Frontend/supabase/: migration_add_conversation_id.sql
backend/app/: config.py  main.py
backend/app/agents/: agents.py
backend/app/api/: routes.py
backend/app/core/: pipeline_langraph.py
backend/app/services/: pipeline.py
