[project]
name = "multi-agent-system"
version = "0.1.0"
description = "Multi-agent AI research system"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langgraph>=0.2.0",
    "langchain-mistralai>=0.1.0",
    "tavily-python>=0.3.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "tiktoken>=0.6.0",
    "rich>=13.7.0",
    "tenacity>=8.2.0",
    "pydantic>=2.5.0",
]
